styles.css
body{
    font-family: 'Josefin Slab', serif;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    background-color: white;
}

.img {
    display: flex;
    width: 40%;
    height: 96%;
    margin: 1% 1% 1% 1%;
    background: url(./images/blue.jpg) no-repeat center;
    background-size: cover;
    align-content: center;
    justify-content: center;
    border: 1px soli white;
    border-radius: 5px;
}

.img-description {
    margin-top: auto;
    margin-bottom: 10px;
    font-size: 100%;
    color: white;
    font-weight: 900;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
    background-color: rgba(0, 0, 0, 0.472);
    padding: 5px;
}

a {
    color: inherit;
    text-decoration: inherit;
}

.form-label {
    font-weight: 900;
    font-size: 20px;
    display: block;
    padding-top: 8px;
    transition: all 0.5s;
    transform: translateY(-3.4rem);
}

.form {
    width: 60%;
    margin: 0;
    padding: 0;
    margin-top: 5%;
}

.form > * {
    padding-left: 10%;
    padding-right: 10%;
}

.form-input {
    border: 2px solid gray;
    color: #333;
    font-size: 1.2 rem;
    padding: 0.2 rem 0.2 rem;
    border-radius: 0.2 rem;
    width: 100%;
    display: block;
    transition: all 0.5s;
    margin-top: 5%;
    padding-right: 10%;
}

.form-input:focus {
    transition: 0.2s;
    outline: none;
    border: 2px solid blue;
}

.form-input:placeholder-shown + .form-label {
    opacity: 0;
    visibility: hidden;
}

form {
    padding-top: 3%;
    width: 80%;
    margin-left: 0%;
    background-color: rgba(0, 0, 0, 0.034);
}

.inputs {
    display: flex;
    flex-direction: row;
    width: 90%;
}

.inputs > :last-child {
    padding-left: 10%;
}

.form-end {
    margin-top: 20px;
    position: absolute;
    font-size: 10px;
}

.btn {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px 30px;
    border-radius: 6px;
    border: none;
    font-size: 30px;
    background: #009900;
    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.01),
        inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
        0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
    color: #dfdedf;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    cursor: pointer;
    border-bottom: 2px solid rgb(139, 139, 139);
    border-right: 2px solid rgb(139, 139, 139);
}

.btn:hover {
    outline: 0px;
    box-shadow: inset 0px 0.8px 1px -0.25px rgba(255, 255, 255, 0.2),
        0px 0.5px 1px rgba(0, 0, 0, 0.1),
        0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
}

.login {
    color: #009900;
}

.error {
    border: 2px solid red;
}

.errorMessage {
    font-size: 25px;
    font-weight: 900;
    color: red;
}

.img-logo {
    width: 10%;
    height: fit-content;
    position: fixed;
    margin-left: 28%;
    background-color: rgba(0, 0, 0, 0.178);
}

.odin-img {
    width: 100%;

}

